--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Memo DeJa vu – Class of 2026 | Department of Educational Management</title>
+  <title>Memoir DeJa vu – Class of 2026 | Department of Educational Management</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
 
 <!-- ===== NAV ===== -->
 <nav id="navbar">
-  <div class="nav-brand">MEMO DEJA VU</div>
+  <div class="nav-brand">MEMOIR DEJA VU</div>
   <ul class="nav-links" id="navLinks">
     <li><a href="#about">Journey</a></li>
     <li><a href="#timeline">Our Era</a></li>
@@ -37,7 +37,7 @@
   <div class="hero-particles" id="particles"></div>
   <div class="hero-content">
     <div class="hero-eyebrow">Class of 2026 &nbsp;·&nbsp; Department of Educational Management</div>
-    <h1 class="hero-title">Memo DeJa <span>Vu</span></h1>
+    <h1 class="hero-title">Memoir DeJa <span>Vu</span></h1>
     <div class="hero-class">Class of 2026</div>
     <div class="hero-dept">Department of Educational Management</div>
     <div class="hero-line"></div>
@@ -241,7 +241,7 @@
   <div class="container">
     <div class="capsule-inner">
       <div class="reveal">
-        <span class="section-label">Sealed Until 2033</span>
+        <span class="section-label">Sealed Until 2031</span>
         <h2 class="section-title">Letter to My Future Self</h2>
         <div class="section-divider" style="margin:0 auto;"></div>
         <p style="color:var(--white-60); font-family:var(--font-serif); font-style:italic; margin-bottom:2rem;">Write a message to who you'll be in five years. This capsule reopens in 2033.</p>
@@ -292,7 +292,7 @@
         The Department of Educational Management did not merely award us degrees. It gave us a lens through which to see education, leadership, and the future. We carry that lens with us into every institution, classroom, and community we will ever touch.
       </p>
       <p style="font-family:var(--font-display); font-size:1rem; letter-spacing:3px; color:var(--gold); text-transform:uppercase; margin-top:2rem;">
-        Thank you. From the Class of 2028.
+        Thank you. From the Class of 2026.
       </p>
     </div>
     <div class="lecturer-cards reveal reveal-delay-1" id="lecturerCards"></div>
@@ -344,10 +344,10 @@
     </div>
     <div class="footer-divider"></div>
     <div class="footer-bottom">
-      <div class="footer-brand">MEMO DEJA VU</div>
+      <div class="footer-brand">MEMOIR DEJA VU</div>
       <div class="footer-info">
         <div class="footer-date">Graduation Day — 2026 · Department of Educational Management</div>
-        <div class="footer-powered">Powered by <span>Memo Deja Vu</span> · Annual Legacy Experience</div>
+        <div class="footer-powered">Powered by <span>Memoir Deja Vu</span> · Annual Legacy Experience</div>
       </div>
       <div style="text-align:right; font-family:var(--font-serif); font-style:italic; color:var(--white-60); font-size:0.85rem;">
         Class of 2026<br>Forever
