--- a/index.html
+++ b/index.html
@@ -236,6 +236,104 @@
   </div>
 </section>
 
+<!-- ===== ANONYMOUS CONFESSIONS ===== -->
+<section id="confessions">
+  <div class="container">
+    <div class="confessions-inner reveal">
+
+      <!-- Section Header -->
+      <span class="section-label">No Names. No Judgement.</span>
+      <h2 class="section-title">The Confession Wall</h2>
+      <div class="section-divider" style="margin:0 auto;"></div>
+      <p class="confessions-subtext">
+        That crush you never told. That apology you never gave. That memory only you two share.
+        Say it now — anonymously, forever.
+      </p>
+
+      <!-- Submission Form -->
+      <form class="confession-form" id="confessionForm">
+
+        <div class="confession-field">
+          <label class="confession-label">Who is this for? <span>(optional)</span></label>
+          <input
+            type="text"
+            id="confessionTo"
+            name="to"
+            placeholder="e.g. 'You know who you are...' or just a first name"
+            class="confession-input"
+            maxlength="60"
+          />
+        </div>
+
+        <div class="confession-field">
+          <label class="confession-label">Your message <span>(required)</span></label>
+          <textarea
+            id="confessionMessage"
+            name="message"
+            class="confession-textarea"
+            placeholder="Back in 200 level, I always looked forward to your smile in the morning lecture... I never said anything but I want you to know."
+            maxlength="600"
+            required
+          ></textarea>
+          <span class="confession-charcount"><span id="charCount">0</span>/600</span>
+        </div>
+
+        <div class="confession-field">
+          <label class="confession-label">Category <span>(optional)</span></label>
+          <div class="confession-tags">
+            <button type="button" class="tag-btn active" data-tag="💌 Confession">💌 Confession</button>
+            <button type="button" class="tag-btn" data-tag="🙏 Apology">🙏 Apology</button>
+            <button type="button" class="tag-btn" data-tag="😂 Funny Secret">😂 Funny Secret</button>
+            <button type="button" class="tag-btn" data-tag="🌟 Appreciation">🌟 Appreciation</button>
+            <button type="button" class="tag-btn" data-tag="🔥 Hot Take">🔥 Hot Take</button>
+          </div>
+        </div>
+
+        <!-- Hidden fields -->
+        <input type="hidden" id="confessionCategory" value="💌 Confession" />
+
+        <button type="submit" class="confession-submit" id="confessionSubmit">
+          <span class="submit-icon">🕊️</span>
+          <span class="submit-text">Send Anonymously</span>
+        </button>
+
+      </form>
+
+      <!-- Success State -->
+      <div class="confession-success" id="confessionSuccess">
+        <div class="success-icon">🕊️</div>
+        <h3 class="success-title">Your message has flown.</h3>
+        <p class="success-text">
+          Sent anonymously. No one will ever know it was you —
+          but they'll feel it when it appears on the wall.
+        </p>
+        <button class="confession-reset" onclick="resetConfessionForm()">Send Another</button>
+      </div>
+
+      <!-- Public Confession Wall -->
+      <div class="confession-wall-section">
+        <h3 class="confession-wall-title">What They're Saying</h3>
+        <p class="confession-wall-sub">Approved confessions from your classmates</p>
+        <div id="confessionWall"></div>
+      </div>
+
+      <!-- Admin Trigger (subtle, at the bottom) -->
+      <div class="admin-trigger-wrap">
+        <button class="admin-trigger-btn" onclick="openAdminPanel()">⚙ Admin</button>
+      </div>
+
+      <!-- Admin Panel (hidden until password entered) -->
+      <div id="adminPanel">
+        <div class="admin-panel-title">⚙ Admin Panel</div>
+        <p class="admin-panel-sub">Pending confessions — approve to make them visible on the wall.</p>
+        <button class="admin-refresh-btn" onclick="loadAdminConfessions()">↻ Refresh</button>
+        <div id="adminList"></div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 <!-- ===== TIME CAPSULE ===== -->
 <section id="capsule">
   <div class="container">
@@ -358,6 +456,7 @@
 
 <!-- JavaScript (loaded at end of body for performance) -->
 <script src="main.js"></script>
+<script src="confessions.js"></script>
 
 </body>
 </html>
